--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,15 +11,9 @@ body {
   margin: 0 auto; }
 
 header {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-between;
+  align-items: center;
   margin: 0 auto;
   max-width: 704px;
   height: 68px;
@@ -42,17 +36,13 @@ header a:hover {
     font-size: 20px; } }
 @media screen and (max-width: 600px) {
   header {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column; } }
+    flex-direction: column; } }
 .main404 {
   display: block;
   background-size: cover;
   width: 100%;
   height: 100%;
-  -webkit-box-shadow: inset 0 0 0 1000px rgba(102, 51, 51, 0.5);
-          box-shadow: inset 0 0 0 1000px rgba(102, 51, 51, 0.5);
+  box-shadow: inset 0 0 0 1000px rgba(102, 51, 51, 0.5);
   text-align: center;
   background-image: url("/images/404.png");
   background-position: center;
@@ -77,8 +67,7 @@ header a:hover {
   background-size: cover;
   width: 100%;
   height: 100%;
-  -webkit-box-shadow: inset 0 0 0 1000px rgba(102, 51, 51, 0.5);
-          box-shadow: inset 0 0 0 1000px rgba(102, 51, 51, 0.5);
+  box-shadow: inset 0 0 0 1000px rgba(102, 51, 51, 0.5);
   background-image: url("/images/pubs.png");
   background-position: top;
   height: 520px; }
@@ -141,20 +130,17 @@ header a:hover {
   background-size: cover;
   width: 100%;
   height: 100%;
-  -webkit-box-shadow: inset 0 0 0 1000px rgba(102, 51, 51, 0.5);
-          box-shadow: inset 0 0 0 1000px rgba(102, 51, 51, 0.5);
+  box-shadow: inset 0 0 0 1000px rgba(102, 51, 51, 0.5);
   background-image: url("/images/home1.png");
   background-position: center;
   background-size: cover;
-  -webkit-box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.1);
-          box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.1);
+  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.1);
   height: 1090px; }
 
 .home-logo {
   padding-top: 350px;
   height: 666px;
-  -webkit-filter: invert(1);
-          filter: invert(1);
+  filter: invert(1);
   background-image: url("/images/home-logo.png");
   background-repeat: no-repeat;
   background-position: center; }
@@ -165,8 +151,7 @@ header a:hover {
 .beerhouse-logo {
   height: 300px;
   padding-bottom: 80px;
-  -webkit-filter: invert(0.2);
-          filter: invert(0.2);
+  filter: invert(0.2);
   background-image: url("/images/home-barrel.png");
   background-repeat: no-repeat;
   background-position: center; }
@@ -191,6 +176,7 @@ header a:hover {
 .barrels {
   background-image: url("/images/home2.png");
   background-position: center;
+  background-size: cover;
   height: 294px; }
 
 @media screen and (max-width: 800px) {
@@ -199,8 +185,7 @@ header a:hover {
 
   .home-logo {
     height: 300px;
-    -webkit-transform: scale(0.7);
-            transform: scale(0.7); }
+    transform: scale(0.7); }
 
   .beerhouse-text {
     width: 500px; }
@@ -211,8 +196,7 @@ header a:hover {
   .home-logo {
     height: 350px;
     margin: 0px -100px 0px -100px;
-    -webkit-transform: scale(0.6);
-            transform: scale(0.6); } }
+    transform: scale(0.6); } }
 @media screen and (max-width: 600px) {
   .mainHome {
     height: 300px; }
@@ -237,8 +221,7 @@ header a:hover {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  -webkit-box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.7);
-          box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.7);
+  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.7);
   height: 518px; }
 
 .mainBeer-content {
@@ -263,15 +246,11 @@ header a:hover {
   text-align: justify; }
 
 .mainBeer-brands {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   padding-top: 40px;
   margin: 0 auto;
   width: 778px;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between; }
+  justify-content: space-between; }
   .mainBeer-brands div {
     width: 130px;
     height: 100px;
@@ -302,11 +281,8 @@ header a:hover {
 
   .mainBeer-brands {
     width: 530px;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-transform: scale(0.9);
-            transform: scale(0.9); } }
+    justify-content: center;
+    transform: scale(0.9); } }
 @media screen and (max-width: 600px) {
   .mainBeer {
     height: 400px; }
@@ -321,8 +297,7 @@ header a:hover {
 
   .mainBeer-brands {
     max-width: 300px;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap; } }
+    flex-wrap: wrap; } }
 @media screen and (max-width: 420px) {
   .mainBeer {
     height: 300px; }
@@ -341,8 +316,7 @@ header a:hover {
   background-size: cover;
   width: 100%;
   height: 100%;
-  -webkit-box-shadow: inset 0 0 0 1000px rgba(102, 51, 51, 0.5);
-          box-shadow: inset 0 0 0 1000px rgba(102, 51, 51, 0.5);
+  box-shadow: inset 0 0 0 1000px rgba(102, 51, 51, 0.5);
   background-image: url("/images/buddy.png");
   height: 520px;
   background-position: bottom; }
@@ -364,31 +338,20 @@ header a:hover {
 .buddy-form {
   margin: 0 auto;
   max-width: 1075px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around; }
+  justify-content: space-around; }
   .buddy-form p {
-    font-family: 'Eau'; }
-
-.buddy-form-inputs1 {
-  padding-top: 34px; }
-  .buddy-form-inputs1 input {
+    font-family: 'Eau';
+    text-align: right; }
+  .buddy-form input {
     width: 240px;
-    height: 35px;
+    height: 34px;
     font-size: 20px;
     border: 1px solid #303030; }
-  .buddy-form-inputs1 span {
+  .buddy-form span {
     color: #e19e09; }
-  .buddy-form-inputs1 p:nth-of-type(1) input {
-    margin-left: 10px; }
-  .buddy-form-inputs1 p:nth-of-type(2) input {
-    margin-left: 12px; }
-  .buddy-form-inputs1 p:nth-of-type(3) input {
-    margin-left: 7px; }
-  .buddy-form-inputs1 p:nth-of-type(4) input {
-    margin-left: 13px; }
+  .buddy-form .buddy-form-inputs1 {
+    margin: 43px 0px 0px 0px; }
 
 .sendButton {
   width: 530px;
@@ -414,13 +377,8 @@ textarea {
 
 @media screen and (max-width: 960px) {
   .buddy-form {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center; }
+    flex-direction: column;
+    align-items: center; }
 
   .buddy-title {
     font-size: 48px; } }
@@ -445,12 +403,8 @@ textarea {
 
   textarea {
     width: 295px; } }
-@media screen and (max-width: 336px) {
-  .buddy-form-inputs1 p:nth-of-type(1) input {
-    margin-left: 12px; }
-  .buddy-form-inputs1 p:nth-of-type(2) input {
-    margin-left: 12px; }
-  .buddy-form-inputs1 p:nth-of-type(3) input {
-    margin-left: 12px; } }
+@media screen and (max-width: 380px) {
+  .buddy-form input {
+    width: 190px; } }
 
 /*# sourceMappingURL=style.css.map */
