--- a/views/buddy.pug
+++ b/views/buddy.pug
@@ -7,24 +7,24 @@ block content
 	.buddy-text sign up to receive our latest news and incredible offers
 	.buddy-form
 		.buddy-form-inputs1
-		p
-			| First Name
-			span *
-			input(type='text')
-		p
-			| Last Name
-			span *
-			input(type='text')
-		p
-			| Your adress
-			span *
-			input(type='text')
-		p
-			| Your email
-			span *
-			input(type='email')
+			p
+				| First Name
+				span * &nbsp&nbsp
+				input(type='text')
+			p
+				| Last Name
+				span * &nbsp&nbsp
+				input(type='text')
+			p
+				| Your adress
+				span * &nbsp&nbsp
+				input(type='text')
+			p
+				| Your email
+				span * &nbsp&nbsp
+				input(type='email')
 		.buddy-form-inputs2
-			p Leave your comment&amp;nbsp&amp;nbsp
+			p Leave your comment
 			center
 				textarea
 			.sendButton send
