--- a/views/header.pug
+++ b/views/header.pug
@@ -1,9 +1,9 @@
 extends layout
 block content
 	header
-		a(href='http://localhost:3000/') Home
-		a(href='http://localhost:3000/pubs') Pubs
-		a(href='http://localhost:3000/beer') Beers
-		a(href='http://localhost:3000/404') Food
-		a(href='http://localhost:3000/404') Sign Up
-		a(href='http://localhost:3000/buddy') Contact Us
+		a(href='https://fierce-reaches-84796.herokuapp.com/') Home
+		a(href='https://fierce-reaches-84796.herokuapp.com/pubs') Pubs
+		a(href='https://fierce-reaches-84796.herokuapp.com/beer') Beers
+		a(href='https://fierce-reaches-84796.herokuapp.com/404') Food
+		a(href='https://fierce-reaches-84796.herokuapp.com/404') Sign Up
+		a(href='https://fierce-reaches-84796.herokuapp.com/buddy') Contact Us
